api key for security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.security.user.name=tariq
 spring.security.user.password=tariq
 app.surge.pricing.duration.ms=60000
 app.calls.surge.call.limit=3
+app.http.auth-token-header-name=x-auth-api-key
+app.http.auth-token-value=complex-api-key-present-in-header
